--- a/test_scripts.ipynb
+++ b/test_scripts.ipynb
@@ -33,7 +33,7 @@
    },
    "outputs": [],
    "source": [
-    "df = df[df.Channel == 'unity_of_fields']"
+    "df = df[df.Channel == 'washingtonpost']"
    ]
   },
   {
